# open-telemetry

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
config/: otel-collector-config.yaml  otel-collector-datadog-config.yaml
